# geronimo

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  Makefile-bullet-physics  Makefile-unit-tests  README.md  detailed-build.md  sh_bullet_physics.sh  sh_check_if_up_to_date.sh  sh_everything.sh  sh_format.sh  sh_geronimo.sh  sh_install_thirdparties.sh  sh_tidy.sh  sh_unit_test.sh
samples/test-bed/: .clang-format  .gitignore  CMakeLists.txt  Makefile  sh_everything.sh  sh_format.sh  sh_tidy.sh
samples/test-bed/assets/data/: index.jsonc  stupid-data.jsonc  voxel-data.jsonc
samples/test-bed/assets/tmp-data/: tmp-json.jsonc
samples/test-bed/scripts/: sh_build_with_cmake.sh
samples/test-bed/src/: main.cpp
samples/test-bed/src/application/: Application.cpp  Application.hpp
samples/test-bed/src/application/context/: Context.cpp  Context.hpp  Context_experimentalPhysicVehicle.cpp  Context_initGraphic.cpp  Context_initializeGraphicResources.cpp  (+1 more)
samples/test-bed/web-wasm-loader/: package.json
samples/test-bed/web-wasm-loader/src/: WasmApplication.ts  main.ts
src/bullet-physics/bullet-collision/: CMakeLists.txt
src/bullet-physics/bullet-dynamics/: CMakeLists.txt
src/bullet-physics/bullet-linearmath/: CMakeLists.txt
src/geronimo/audio/: CMakeLists.txt  OpenALSoundManager.cpp  OpenALSoundManager.hpp  OpenAlContext.hpp
src/geronimo/audio/OpenALSoundManager_tests/: headers.hpp
src/geronimo/audio/decoders/: ogg.cpp  ogg.hpp
src/geronimo/graphics/: CMakeLists.txt  DataTexture.cpp  DataTexture.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Geometry.cpp  Geometry.hpp  GeometryBuilder.cpp  GeometryBuilder.hpp  GlContext.hpp  Image.cpp  Image.hpp  RenderBuffer.cpp  RenderBuffer.hpp  ResourceManager.cpp  ResourceManager.hpp  ShaderProgram.cpp  ShaderProgram.hpp  ShaderProgramBuilder.cpp  ShaderProgramBuilder.hpp  Texture.cpp  Texture.hpp
src/geronimo/graphics/camera/: Camera.cpp  Camera.hpp  FrustumCulling.cpp  FrustumCulling.hpp  FrustumCulling.tests.cpp  PerspectiveClustering.cpp  PerspectiveClustering.hpp  sceneToScreen.cpp  sceneToScreen.hpp
src/geronimo/graphics/input-managers/: MouseManager.hpp  TouchManager.cpp  TouchManager.hpp
src/geronimo/graphics/loaders/: loadObjModel.cpp  loadObjModel.hpp
src/geronimo/graphics/make-geometries/: MakeGeometries.hpp  MakeGeometries_makeBox.cpp  MakeGeometries_makeCylinder.cpp  MakeGeometries_makeDisk.cpp  MakeGeometries_makeSphere.cpp  MakeGeometries_makeTorus.cpp  MakeGeometries_utilities.cpp
src/geronimo/graphics/sdl/: SDLWindowWrapper.cpp  SDLWindowWrapper.hpp
src/geronimo/graphics/vertexBuffers/: VertexArrayObject.cpp  VertexArrayObject.hpp  VertexBufferObject.cpp  VertexBufferObject.hpp
src/geronimo/graphics/wrappers/: GlContext.cpp  GlContext_Framebuffers.cpp  GlContext_Shader.cpp  GlContext_Texture.cpp  GlContext_VertexBufferObject.cpp  glCheckError.cpp  glCheckError.hpp
src/geronimo/physics/: AbstractPhysicWorld.cpp  AbstractPhysicWorld.hpp  CMakeLists.txt  PhysicWorld.cpp  PhysicWorld.hpp
src/geronimo/physics/AbstractPhysicWorld_tests/: test_consistence.tests.cpp  test_query_raycast.tests.cpp
src/geronimo/physics/body/: AbstractPhysicBody.hpp  AbstractPhysicBodyManager.cpp  AbstractPhysicBodyManager.hpp  PhysicBody.cpp  PhysicBody.hpp  PhysicBodyDef.hpp  PhysicBodyManager.cpp  PhysicBodyManager.hpp
src/geronimo/physics/helpers/: transformConversion.cpp  transformConversion.hpp
src/geronimo/physics/queries/: QueryShape.cpp  QueryShape.hpp  Raycaster.cpp  Raycaster.hpp
src/geronimo/physics/shape/: PhysicShape.cpp  PhysicShape.hpp  PhysicShapeDef.hpp
src/geronimo/physics/unused/: PhysicFixedConstraint.cpp  PhysicHingeConstraint.cpp
src/geronimo/physics/vehicle/: AbstractPhysicVehicle.hpp  AbstractPhysicVehicleManager.cpp  AbstractPhysicVehicleManager.hpp  PhysicVehicle.cpp  PhysicVehicle.hpp  PhysicVehicleDef.hpp  PhysicVehicleManager.cpp  PhysicVehicleManager.hpp
src/geronimo/physics/world/: CollisionAlgorithm.hpp  PhysicWorld.cpp  PhysicWorld.hpp
src/geronimo/system/: CMakeLists.txt  ErrorHandler.hpp  TraceLogger.cpp  TraceLogger.hpp  aliasing.hpp
src/geronimo/system/compression/: AdaptiveHuffmanAlgorithm.cpp  AdaptiveHuffmanAlgorithm.tests.cpp
src/geronimo/system/containers/: basic_double_linked_list.hpp  dynamic_heap_array.hpp  fixed_size_array.hpp  generic_array_container.hpp  static_heap_grid_array.hpp  weak_ref_data_pool.hpp
src/geronimo/system/easing/: GenericEasing.hpp  easingFunctions.cpp  easingFunctions.hpp
src/geronimo/system/file-utils/: FileLoadFileCallback.cpp  FileManager.cpp  FileManager.hpp
src/geronimo/system/filtering/: filtering.hpp
src/geronimo/system/math/: BSpline.hpp  RayCastResult.hpp  angles.cpp  angles.hpp  circleCircleIntersectionPoints.cpp  circleCircleIntersectionPoints.hpp  circleCircleIntersectionPoints.tests.cpp  clamp.cpp  clamp.hpp  compute-normal.cpp  compute-normal.hpp  constants.hpp  float-vec-helpers.cpp  lerp.cpp  lerp.hpp  rayIntersectSphere.tests.cpp  rayIntersectTriangle.cpp  rayIntersectTriangle.hpp  rayIntersectTriangle.tests.cpp  rotateVec2.cpp  safe-normalize.cpp  safe-normalize.hpp  validation-helpers.cpp
src/geronimo/system/messaging/: MessageBuffer.cpp  MessageBuffer.hpp  MessageView.cpp  MessageView.hpp
src/geronimo/system/metrics/: Clock.hpp  HistoricalTimeData.cpp  HistoricalTimeData.hpp  PerformanceProfiler.cpp  PerformanceProfiler.hpp
src/geronimo/system/multithreading/: Producer.cpp  Producer.hpp
src/geronimo/system/parser-utils/: BasicRegexParser.cpp  BasicRegexParser.hpp  ValuesParsers.cpp  ValuesParsers.hpp  string_view_regexp.cpp  string_view_regexp.hpp
src/geronimo/system/rng/: DeterministicRng.tests.cpp  RandomNumberGenerator.hpp
src/geronimo/system/string-utils/: stream-formatter.cpp  stream-formatter.hpp
src/geronimo/system/trees/: BvhTree.hpp  KdTree.hpp  KdTree2d.hpp  KdTree3d.hpp  Spatial2dIndexer.hpp  Spatial3dIndexer.hpp  SpatialIndexer.hpp
thirdparties/lib-bullet/collision/: CMakeLists.txt
thirdparties/lib-bullet/dynamics/: CMakeLists.txt
thirdparties/lib-bullet/linearmath/: CMakeLists.txt
(+671 files in other folders)
